
        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

- Added `exitSpanMinDuration` configuration field, allowing end users to
  set a time threshold for dropping exit spans. ({pull}2843[#2843])

[float]
===== Bug fixes

- Fix an issue where the transaction `name` for a trace of a Lambda function
  implementing a GraphQL server (e.g. via https://www.apollographql.com/docs/apollo-server/deployment/lambda/[apollo-server-lambda])
  would not get the GraphQL-specific naming. ({issues}2832[#2832])

[float]
===== Chores

[[release-notes-3.37.0]]
==== 3.37.0 2022/07/18

[float]
===== Features

- The agent will now use https://nodejs.org/api/async_context.html#class-asynclocalstorage[`AsyncLocalStorage`]
  for run-context tracking in new enough versions of Node.js (versions >=14.5
  and >=12.19). This can reduce overhead from using the APM agent, especially in
  Promise-heavy applications. ({pull}2786[#2786])
+
This also adds a new <<context-manager,`contextManager`>> configuration option
to control which mechanism the agent uses for run-context tracking. It replaces
the, now deprecated, <<async-hooks,`asyncHooks`>> configuration option. If
you experience problems with the new AsyncLocalStorage-based tracking, you can
restore the older behavior with `contextManager: "asynchooks"`.

[float]
===== Chores

- The old "patch" mechanism that the APM agent uses for run-context tracking
  (enabled via <<context-manager,`contextManager: "patch"`>>, or previously
  enabled via `asyncHooks: false`) is now *deprecated*. It will be removed in a
  future major version (after an 18 month deprecation period).


[[release-notes-3.36.0]]
==== 3.36.0 2022/06/15

[float]
===== Features

- Adds https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-dropped-stats.md[dropped span statistics]