@@ -82,18 +82,17 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
     // '.httpRequest.endpoint' might differ from '.service.endpoint' if
     // the bucket is in a different region.
     const endpoint = httpRequest && httpRequest.endpoint
-    const destContext = {
-      service: {
-        name: SUBTYPE,
-        type: TYPE
-      }
-    }
+    const destContext = {}
     if (endpoint) {
       destContext.address = endpoint.hostname
       destContext.port = endpoint.port
     }
     if (resource) {
-      destContext.service.resource = resource
+      destContext.service = {
+        name: SUBTYPE,
+        type: TYPE,
+        resource
+      }
     }
     if (region) {
       destContext.cloud = { region }
